Fix dark mode for "Ink"

--- a/src/css/games/ink.less
+++ b/src/css/games/ink.less
@@ -12,8 +12,22 @@
 		background: var(--dark-back);
 	}
 
+	.player-table h3 {
+		color: var(--light-70);
+	}
+
 	.player-board .counters .palette .ink-counter {
 		background: var(--dark-10);
 		filter: var(--highlight-min);
+	}
+
+	#bga-zoom_controls {
+		filter: invert(0.8);
+	}
+
+	#hands .hand .player-name-wrapper {
+		background: var(--dark-10);
+		color: var(--light-80);
+		border: 1px solid var(--light-50);
 	}
 }
